--- a/gabardoLaravel2017.bib
+++ b/gabardoLaravel2017.bib
@@ -1,6 +1,8 @@
 @BOOK {gabardoLaravel2017,
     author    = "Ademir Cristiano Gabardo",
     title     = "Laravel para Ninjas",
+    editor = {Prates, Rubens},
+    isbn = {978-85-7522-550-9},
     publisher = "Novatec Editora Ltda.",
     year      = "2017",
     volume    = "1",
@@ -8,4 +10,5 @@
     edition   = "first",
     month     = "mar",
     note      = "O livro Laravel para Ninjas apresenta a construção de aplicações web em PHP utilizando o framework Laravel em uma abordagem atual do desenvolvimento web por meio da construção de uma API RESTFul e do consumo de dados por meio da biblioteca JavaScript Angular.js. ISBN: 978-85-7522-550-9."
+    abstract = {O livro Laravel para Ninjas apresenta a constru{\c{c}}{\~{a}}o de aplica{\c{c}}{\~{o}}es web em PHP utilizando o framework Laravel em uma abordagem atual do desenvolvimento web por meio da constru{\c{c}}{\~{a}}o de uma API RESTFul e do consumo de dados por meio da biblioteca JavaScript Angular.js. O livro {\'{e}} apresentado de forma incremental, partindo das fun{\c{c}}{\~{o}}es e dos exemplos mais simples, progredindo para o uso de recursos mais avan{\c{c}}ados. Os exemplos e as informa{\c{c}}{\~{o}}es contidos no livro s{\~{a}}o compat{\'{i}}veis com Windows, MAC OS X e Linux.}
 }
